# 3d-renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Graphic.h  Material.h  Mesh.h  Object3D.h  Point.hpp  Scene.h  TGAImage.h  Tracer.cuh  Vec.hpp
src/: Graphic.cpp  Material.cpp  Mesh.cpp  Scene.cpp  TGAImage.cpp  Tracer.cu
tests/: CMakeLists.txt  VecTest.cpp
